# libskf

./: CMakeLists.txt  README.md
CMake/: SymbolHiding.cmake
app/: CMakeLists.txt
examples/: example_skf_info.c  example_skf_sm2.c
include/: sgd.h  skf.h  skf_ext.h
src/: CMakeLists.txt  skf_dl.c  skf_dl.h  skf_driver.h  skf_driver_ccore.c  skf_driver_haitai.c  skf_driver_longmai.c  skf_ext.c
tests/: CMakeLists.txt
